--- a/swagger/paths/contacts/{id}/get.yaml
+++ b/swagger/paths/contacts/{id}/get.yaml
@@ -1,27 +1,37 @@
 tags:
   - Contacts
-summary: Get contact by ID
+summary: Get contact by id
 operationId: getContactById
-description: Retrieve a specific contact by its unique ID.
+description: Retrieve a contact with the given id.
 security:
   - bearerAuth: []
 parameters:
-  - name: contactId
-    in: path
+  - in: path
+    name: id
     required: true
-    description: The unique identifier of the contact
+    description: Id of the contact to be searched
     schema:
       type: string
+      example: 676b1e6e5e2acedb2277e99b
 responses:
-  200:
+  '200':
     description: Contact retrieved successfully
     content:
       application/json:
         schema:
-          $ref: "../../components/schemas/Contact.yaml"
-  404:
-    description: Contact not found
-    content:
-      application/json:
-        schema:
-          $ref: "../../components/schemas/Error.yaml"
+          type: object
+          required:
+            - status
+            - message
+            - data
+          properties:
+            status:
+              type: integer
+              example: 200
+            message:
+              type: string
+              example: "Successfully found contact with id=676b1e6e5e2acedb2277e99b"
+            data:
+              $ref: ../../../components/schemas/contact.yaml
+  '404':
+    $ref: ../../../components/responses/404.yaml
