--- a/swagger/paths/contacts/{id}/get.yaml
+++ b/swagger/paths/contacts/{id}/get.yaml
@@ -33,5 +33,11 @@ responses:
               example: "Successfully found contact with id=676b1e6e5e2acedb2277e99b"
             data:
               $ref: ../../../components/schemas/contact.yaml
+  '400':
+    $ref: ../../../components/responses/400.yaml
+  '401':
+    $ref: ../../../components/responses/401.yaml
   '404':
     $ref: ../../../components/responses/404.yaml
+  '500':
+    $ref: ../../../components/responses/500.yaml
