--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -9,6 +9,7 @@ requestBody:
   content:
     multipart/form-data:
       schema:
+        type: object
         required:
           - name
           - phoneNumber
